--- a/reports/gfam/gfam_kang_eng_20180430.html
+++ b/reports/gfam/gfam_kang_eng_20180430.html
@@ -13,7 +13,7 @@
     <div class="stackedit__toc">
       
 <ul>
-<li><a href="#subquant-researchsubbr-global-fixed-income-allocation-model-gfam">Quant Research Global Fixed-income Allocation Model (GFAM)</a></li>
+<li><a href="#subquant-researchsubbr-global-fixed-income-allocation-model-gfam">Global Fixed-income Allocation Model (GFAM)</a></li>
 <li><a href="#overview">Overview</a></li>
 <li><a href="#background-dual-momentum-strategy">Background: Dual momentum strategy</a>
 <ul>
